# VectorChord

./: .dockerignore  .gitignore  Cargo.toml  META.json.in  README.md  README.zh-CN.md  deny.toml
.github/workflows/: check.yml  release.yml
deploy/systemd/: tilemaxsimd.env.example  tilemaxsimd.service
devtools/: test_tilemaxsim_reference_sidecar.py  tilemaxsim_reference_sidecar.py
docs/: MAXSIM_TENSOR_SOURCES.md  TILEMAXSIM_CUDA_SIDECAR.md  TILEMAXSIM_IPC_V1.md  TILEMAXSIM_IPC_V2.md
services/: Dockerfile.postgres  Dockerfile.tilemaxsim  Dockerfile.tilemaxsimd  benchmark_full_corpus_tilemaxsim.py  benchmark_gbrain_phase3.py  benchmark_gbrain_scoped_tilemaxsim.py  benchmark_npy_tilemaxsim_sidecar.py  benchmark_postgres_single_vector.py  benchmark_tilemaxsim_ablation.py  benchmark_tilemaxsim_cuda.py  benchmark_tilemaxsim_io_pipeline.py  build_tilemaxsim_tensor_cache.py  test_tilemaxsim_cuda_sidecar.py  test_tilemaxsim_gpu_cache.py  test_tilemaxsim_rust_daemon.py  test_tilemaxsim_shard.py  tilemaxsim_cuda_sidecar.py  tilemaxsim_gpu_cache.py  tilemaxsim_shard.py  tilemaxsim_triton.py
services/packaging/: tilemaxsimd-kubernetes.yaml  tilemaxsimd.conf.example  vchord-tilemaxsimd.service
services/tilemaxsimd/: Cargo.toml  README.md  build.rs
services/tilemaxsimd/native/: tilemaxsim_cuda.cu
services/tilemaxsimd/src/: cache.rs  engine.rs  gpu.rs  lifecycle.rs  main.rs  protocol.rs  scheduler.rs  server.rs  shard.rs
sql/install/: vchord--1.2.0.sql
sql/upgrade/: vchord--1.1.1--1.2.0.sql
src/datatype/: mod.rs  operators_halfvec.rs  operators_rabitq4.rs  (+2 more)
(+33 files in other folders)
